[package]
name = "gnome"
version = "0.1.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/gnome"
description = """
A housekeeper gnome to sort through your messy desktop.

Essentially just cleanup for your overflowing image files & screenshots.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"